--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write .",
     "test:integration": "playwright test",
+    "test:report": "playwright show-report playwright-report",
     "test:unit": "vitest"
   },
   "devDependencies": {
